manifests/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - giropops-senhas.ozorio.dev.br
    secretName: giropops-senhas.ozorio.dev.br-tls
  rules:
  - host: giropops-senhas.ozorio.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: giropops-senhas
            port: 
              number: 5000
